Added support for both `mapping` and `anyOf` for polymorphy.
